# linnet

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  example_directional_constraints.md  fig-index.typ  flake.nix  patch.diff
.agent/: README.md  notes.md
.agent/context/: search_index.json  sessions.json
.github/workflows/: pypi.yml
.zed/: settings.json  tasks.json
benches/: energy_gl303.rs  iterbv.rs  layout_gl303.rs  layout_small.rs  stcut.rs
clinnet/: CHANGELOG.md  Cargo.toml  README.md
clinnet/src/: main.rs
clinnet/templates/: figure.typ  grid.typ  linnest.wasm
examples/: edge_style.typ  layout.typ  linnest.wasm  logo.typ  main.typ  test.typ
linnest/: CHANGELOG.md  Cargo.toml
linnest/src/: geom.rs  lib.rs
linnet-py/: CHANGELOG.md  Cargo.toml  linnet_py.pyi  pyproject.toml
linnet-py/src/: lib.rs
linnet-py/tests/: test_basic.py
src/: dot_parser.rs  drawing.rs  half_edge.rs  lib.rs  main.rs  num_traits.rs  permutation.rs
src/half_edge/: builder.rs  drawing.rs  hedgevec.rs  involution.rs  layout.rs  nodestorage.rs  nodestore.rs  subgraph.rs  swap.rs  symbolica_interop.rs  test_graphs.rs  tests.rs  tree.rs  typed_vec.rs
src/half_edge/algorithms/: trace_unfold.rs  transitive_ops.rs
src/half_edge/involution/: newinv.rs  test.rs
src/half_edge/layout/: force.rs  simulatedanneale.rs  spring.rs
src/half_edge/nodestore/: bitvec_find.rs  forest.rs  test.rs  vec.rs
src/half_edge/snapshots/: linnet__half_edge__tests__cube_dot.snap  linnet__half_edge__tests__hairy_three_loop.snap  linnet__half_edge__tests__hairy_three_loop_cycles.snap  linnet__half_edge__tests__hairy_three_loop_dot.snap  linnet__half_edge__tests__hairy_three_loop_dot_internal.snap  linnet__half_edge__tests__join.snap  linnet__half_edge__tests__self_energy_box-2.snap  linnet__half_edge__tests__self_energy_box-3.snap  linnet__half_edge__tests__self_energy_box.snap  linnet__half_edge__tests__three_loop.snap  linnet__half_edge__tests__three_loop_cycles.snap  linnet__half_edge__tests__three_loop_dot.snap
src/half_edge/subgraph/: contracted.rs  cut.rs  cycle.rs  empty.rs  full.rs  internal.rs  node.rs  subset.rs
src/parser/: edge.rs  error.rs  global.rs  hedge.rs  mod.rs  set.rs  subgraph_free.rs  vertex.rs
src/tree/: child_pointer.rs  child_vec.rs  iterato.rs  mod.rs  parent_pointer.rs
src/union_find/: bitvec_find.rs  mod.rs  test.rs  union_find_node.rs
templates/: figure.typ  grid.typ
test/: test.dot  test2.dot
