[package]
name = "linnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linnet"
path = "src/lib.rs"

[[bin]]
name = "linnet-cli"
path = "src/bin.rs"
[dependencies]
ahash = "0.8.11"
argmin = { version = "0.10.0", optional = true }
bitvec = { version = "1.0.1", features = ["serde"] }
by_address = "1.2.1"
cgmath = { version = "0.18.0", optional = true }
duplicate = "2.0.0"
indexmap = "2.7.0"
insta = { version = "1.42.0", features = ["ron"] }
itertools = "0.14.0"
rand = { version = "0.8.5", features = ["small_rng"] }
ref-ops = "0.2.5"
serde = { version = "1.0.217", features = ["derive"] }
symbolica = { version = "0.14.0", optional = true }
thiserror = "2.0.11"
derive_more = "2.0.1"

[features]
symbolica = ["dep:symbolica"]
drawing = ["dep:cgmath", "layout"]
layout = ["dep:argmin"]
