[package]
name = "linnet"
version = "0.5.2"
edition = "2021"
description = "A library for working with half-edge data structures, and subgraphs, and drawing them"
license = "MIT"
authors = ["Lucien Huber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linnet"
path = "src/lib.rs"

[profile.bench]
debug = true
opt-level = 3
lto = true

[[bench]]
name = "stcut"
harness = false
# [[bench]]
# name = "iterbv"
# harness = false


[[bin]]
name = "linnet-cli"
path = "src/bin.rs"
[dependencies]
bincode = { version = "2.0.1", features = ["serde"], optional = true }
ahash = "0.8.11"
argmin = { version = "0.10.0", optional = true }
bitvec = { version = "1.0.1" }
by_address = "1.2.1"
cgmath = { version = "0.18.0", optional = true }
duplicate = "2.0.0"
indexmap = "2.7.0"
insta = { version = "1.42.0", features = ["ron"] }
itertools = "0.14.0"
rand = { version = "0.8.5", features = ["small_rng"] }
ref-ops = "0.2.5"
serde = { version = "1.0", features = ["derive"], optional = true }
symbolica = { version = "0.16.0", optional = true }
thiserror = "2.0.11"
derive_more = "0.99.17"
proptest = "1.6.0"
# hibit_tree = "0.1.0-alpha.3"
dot-parser = "0.4.2"
similar-asserts = "1.7.0"
kurbo = "0.11.1"
piet = "0.7.0"

[features]
serde = ["dep:serde", "bitvec/serde"]
symbolica = ["dep:symbolica"]
bincode = ["dep:bincode", "serde"]
drawing = ["dep:cgmath", "dep:argmin"]
# layout = ["dep:argmin"]

[dev-dependencies]
# vers-vecs = { version = "1.6.1", features = ["simd"] }
# vob = "3.0.3"
# smallbitvec = "2.6.0"
# bit-vec = "0.8.0"
# roaring = { version = "0.10.10" }
# hi_sparse_bitset = { version = "0.6.1", features = ["simd"] }
# hibitset = "0.6.4"
# fixedbitset = "0.5.7"
iai-callgrind = "0.14.0"
