[package]
name = "linnest"
version = "0.1.0"
edition = "2021"

[features]
custom = []

[dependencies]
ciborium = "0.2.2"
linnet = { path = ".." , features = ["serde", "drawing"] }
serde = {version="1.0", features=["derive"]}

cgmath = { version = "0.18.0", features = ["serde"] }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
thiserror = "2.0.16"
rand = "0.8.5"





[lib]
crate-type = ["cdylib"]
